:bug: (variables.styl) add z-index for dialog

--- a/src/global/variables.styl
+++ b/src/global/variables.styl
@@ -55,7 +55,7 @@
 
   /* z-index */
   --az-zindex-base: 911;
-  --az-zindex-menu: calc(var(--az-zindex-base) + 1);
+  --az-zindex-dialog: calc(var(--az-zindex-base) + 1);
   --az-zindex-menu: calc(var(--az-zindex-base) + 2);
 }
 .aztec-app {
